fix(local): remove warning + correct sinks init