@@ -335,12 +335,12 @@ public class CommandRunnerService {
         // WARNING: If Hive is in the list of sinks, it should be initialized first as it is the only sink that has an impact on the model
         List<SinkInterface> sinks = new ArrayList<>();
         if(command.getSinksListAsString().contains(SinkParser.Sink.HIVE)) {
-          sinks.addAll(SinkSender.sinksInit(command.getModel(), command.getProperties(),
-              Arrays.asList(SinkParser.Sink.HIVE)));
-          List<SinkParser.Sink> sinkListWithNoHive = command.getSinksListAsString();
-          sinkListWithNoHive.remove(SinkParser.Sink.HIVE);
-          sinks.addAll(SinkSender.sinksInit(command.getModel(), command.getProperties(),
-              sinkListWithNoHive));
+          sinks.addAll(SinkSender.sinksInit(command.getModel(), command.getProperties(), List.of(SinkParser.Sink.HIVE)));
+          List<SinkParser.Sink> sinkListWithNoHive = new ArrayList<>();
+          command.getSinksListAsString().forEach(sink -> {
+            if(sink!=SinkParser.Sink.HIVE) { sinkListWithNoHive.add(sink);}
+          });
+          sinks.addAll(SinkSender.sinksInit(command.getModel(), command.getProperties(), sinkListWithNoHive));
         } else {
           sinks = SinkSender.sinksInit(command.getModel(), command.getProperties(),
                   command.getSinksListAsString());
